--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
         <div class="container">
             <div class="logo-section">
-                <img src="https://pplx-res.cloudinary.com/image/upload/v1755616940/pplx_project_search_images/985d4b7be6b7d6ba7928a30c19f4397e23d1fc91.png" alt="Supergram Logo" class="logo-image">
+                <img src="assests/images/logo.png" alt="Supergram Logo" class="logo-image">
                 <h1 class="logoTitle">Supergram</h1>
             </div>
         </div>
